--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,2 @@
-
+click==8.1.3 ; python_version >= "3.10" and python_version < "4.0"
+colorama==0.4.5 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
